LMRUP-110, fix aligning

--- a/app/assets/stylesheets/forum.sass
+++ b/app/assets/stylesheets/forum.sass
@@ -68,6 +68,7 @@
           font-weight: normal
           font-size: 16px
           vertical-align: middle
+          border-bottom: 1px solid #6F6F6F
           // width: 10%
           &.forum_actions
             width: 10%
@@ -80,11 +81,14 @@
       tr
         &.even
           background-color: #EDF9FB
-          border: 5px solid #EDF9FB
-          border-radius: 5px
+          // border: 5px solid #EDF9FB
+          // border-radius: 5px
+        &.odd
+          // background-color: white
+          // border: 5px solid white
+          // border-radius: 5px
         td
-          border-top: 1px solid #6F6F6F
-          padding: 5px
+          padding: 10px 5px
           text-align: left
           font-weight: normal
           font-size: 16px
